# Altiora_project

./: .env.example  CHANGELOG.md  Dockerfile  README.md  altiora_qa_assistant.py  docker-compose-validation.sh  docker_compose.yml  env-example-complete.txt  env-example-complete.yaml  export.py  pyproject.toml  requirements.txt  setup-script.py  structure.txt
.github/workflows/: ci-cd.yml
altiora.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cli/: main.py
cli/commands/: __init__.py  benchmark.py  doctor.py  init.py  quickstart.py  start.py  test.py
configs/: __init__.py  config_module.py  emergency_webhooks.yaml  error_handling.yaml  master_config.yaml  models.yaml  models_config.yaml  ollama_config.json  ollama_optimized.yaml  prometheus.yml  retry_config.yaml  roles.json  roles.yaml  services.yaml  settings.py  settings_legacy.py  settings_loader.py  training_config.json  validator.py
docs/: ARCHITECTURE.md  env-documentation.md  generate_docs.py  installation_guide.md
docs/examples/: login_test.py
guardrails/: admin_control_system.py  emergency_handler.py  ethical_safeguards.py  interaction_guardrail.py  policy_enforcer.py
policies/: business_rules.py  excel_policy.py  privacy_policy.py  toxicity_policy.py
post_processing/: code_validator.py  excel_formatter.py  output_sanitizer.py
psychodesign/: altiora_core.py  personality_evolution.py  personality_quiz.py
scripts/: audit_query.py  cpu_optimization_script.py  diagnose_ollama.py  docker-compose.ephemeral.yml  generate_keys.py  generate_performance_report.py  validate_setup.py
services/alm/: alm_service.py  requirements.txt
src/: App.js  __init__.py  batch_processor.py  config.py  error_management.py  main.py  models.py  orchestrator.py
tests/: conftest.py  test_admin_control.py  test_altiora_core.py  test_ethical_safeguards.py  test_fine_tuning.py  test_integration.py  test_interfaces.py  test_ocr_wrapper.py  test_orchestrator.py  test_personality_quiz.py  test_playwright_runner.py  test_retry_handler.py  test_services.py
(+139 files in other folders)
