[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "altiora"
version = "0.1.0"
dependencies = [
    "torch>=2.5.0,<3.0.0",
    "torchvision>=0.20.0,<1.0.0",
    "transformers>=4.53.2,<5.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.3.1,<3.0.0",
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pytest>=8.4.1,<9.0.0",
    "wandb>=0.21.0,<1.0.0",
    "redis>=6.2.0,<7.0.0",
    "prometheus_client>=0.22.1,<1.0.0",
    "passlib>=1.7.4,<2.0.0",
    "SQLAlchemy>=2.0.41,<3.0.0",
    "playwright>=1.53.0,<2.0.0",
    "plotly>=6.2.0,<7.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "objgraph>=3.6.2,<4.0.0",
    "bitsandbytes>=0.41.1,<1.0.0",
    "transformers>=4.53.2,<5.0.0",
    "peft>=0.16.0,<1.0.0",
    "datasets>=4.0.0,<5.0.0",
    "huggingface-hub>=0.33.4,<1.0.0",
    "llama-cpp-python>=0.3.14,<1.0.0",
    "safetensors>=0.5.3,<1.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    " SpeechRecognition>=3.14.3,<4.0.0",
    "scikit-learn>=1.7.1,<2.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "tensorboard>=2.20.0,<3.0.0",
    "onnxruntime>=1.22.1,<2.0.0",
    "aiohttp>=3.12.14,<4.0.0",
    "aioredis>=2.0.1,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "black>=25.1.0,<26.0.0",
    "ruff>=0.12.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "zstandard>=0.23.0,<1.0.0",
    "lz4>=4.4.4,<5.0.0",
    "click>=8.2.1,<9.0.0",
    "starlette>=0.47.1,<1.0.0",
    "dash>=3.1.1,<4.0.0",
    "dash-bootstrap-components>=1.5.0,<2.0.0",
    "dash-core-components>=2.0.0,<3.0.0",
    "dash-html-components>=2.0.0,<3.0.0",
    "plotly>=6.2.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "psychodesign*"]
exclude = ["tests*"]